--- a/src/App.css
+++ b/src/App.css
@@ -2,44 +2,88 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  width: 100%;
 }
 
 .navbar {
   width: 100%;
-  padding-top: 7vh;
   padding-left: 2.5em;
-  border: 1px solid black;
 }
 
 .header {
+  width: 100%;
+  padding-top: 7vh;
+  padding-bottom: 4vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid black;
+  border-bottom: 0.7px solid lightgray;
 }
 
 ul {
   width: fit-content;
   top: -50%;
   margin-bottom: 0;
-  border: 1px solid black;
 }
 
-li {
+.header li {
   display: inline;
-  margin-right: 0.5em;
-  margin-left: 0.5em;
-  border-right: 0.5px solid grey;
+  padding-right: 2em;
+  padding-left: 2em;
+  border-right: 0.8px solid lightgray;
+  font-size: 16px;
+}
+
+.header li:last-child {
+  border-right: none;
 }
 
 li a {
   text-decoration: none;
-  color: grey;
+  color: purple;
 }
 
 .logo {
-  width: auto;
-  height: 50px;
   display: flex;
+}
+
+.nav {
+  padding: 1em 2em;
+}
+
+.nav li {
+  display: inline;
+  padding-right: 1em;
+  padding-left: 1em;
+  font-size: 15px;
+}
+
+.newsletter {
+  width: 100%;
+  height: 85vh;
+  background-image: url("./images/smiling-employee.jpg");
+  background-size: cover;
+}
+
+.newsletter-content {
+  width: 40%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  padding-left: 2.5em;
+  color: maroon;
+}
+
+.nl-button {
+  text-decoration: none;
+  color: maroon;
+  border: 2px solid maroon;
+  display: block;
+  width: fit-content;
+  height: auto;
+  padding: 0.5em 2em;
+}
+
+.nl-button:hover {
+  text-decoration: none;
+  color: black;
 }
